fixed some small layout issues

--- a/client/src/components/Courses/Course.module.scss
+++ b/client/src/components/Courses/Course.module.scss
@@ -147,33 +147,24 @@
   width: 100px;
 }
 
-.courseListContainer {
-
-/*  position: absolute;
-  top: 0;
-  height: calc(100% - 60px);
-  width: 100%;
-  background-color: $white-background;
-  padding: 20px 30px;
-  overflow-y: auto;*/
-}
-
-.courseListContainerFullHeight {
-/*  position: absolute;
-  top: 0;
-  left: 15px;
-  width: 100%;
-  height: 100%;
-  background-color: $gray-background;
-  padding: 20px 30px;
-  overflow-y: auto;*/
-}
-
 .courseSelectCheckbox {
   opacity: 1 !important;
   position: absolute;
   top: 15px;
   right: 15px;
+}
+
+.timeWarning {
+  font-style: italic;
+  font-size: 11px;
+  margin-top: -20px;
+  .note {
+    color: $color-bg-light-red;
+    font-family: $font-semi-bold;
+  }
+  .message {
+    color: $gray-pale;
+  }
 }
 
 .timePickerContainer {
